// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarks: can merge bookmark career data with meta data 1`] = `
Array [
  Object {
    "career": Object {
      "description": "Test",
      "id": 1,
      "image": "TestImage",
      "meta": Object {
        "status": "Complete",
      },
      "notes": Array [
        "a",
        "b",
      ],
      "title": "Test",
    },
    "saved": 1970-01-01T00:00:00.000Z,
  },
]
`;

exports[`bookmarks: can merge bookmark career data without meta data 1`] = `
Array [
  Object {
    "career": Object {
      "description": "Test",
      "id": 1,
      "image": "TestImage",
      "meta": Object {},
      "notes": Array [
        "a",
        "b",
      ],
      "title": "Test",
    },
    "saved": 1970-01-01T00:00:00.000Z,
  },
]
`;

exports[`bookmarks: can save new bookmark 1`] = `Array []`;

exports[`bookmarks: can update bookmark state in it's entirity 1`] = `Array []`;

exports[`bookmarks: can update bookmark state in it's entirity 2`] = `
Array [
  Object {
    "career": Object {
      "description": "Test",
      "id": 1,
      "image": "TestImage",
      "notes": Array [
        "a",
        "b",
      ],
      "title": "Test",
    },
    "saved": 1970-01-01T00:00:00.000Z,
  },
]
`;

exports[`bookmarks: can update bookmark state in it's entirity 3`] = `
Array [
  Array [
    "bookmarks",
    "[{\\"career\\":{\\"title\\":\\"Test\\",\\"description\\":\\"Test\\",\\"notes\\":[\\"a\\",\\"b\\"],\\"image\\":\\"TestImage\\",\\"id\\":1},\\"saved\\":\\"1970-01-01T00:00:00.000Z\\"}]",
  ],
]
`;

exports[`bookmarks: dirting state after saving a bookmark 1`] = `false`;

exports[`bookmarks: dirting state after saving a bookmark 2`] = `true`;

exports[`career meta data: can merge career data with meta data 1`] = `
Array [
  Object {
    "description": "Test",
    "id": 1,
    "image": "TestImage",
    "meta": Object {
      "status": "Not Started",
    },
    "notes": Array [
      "a",
      "b",
    ],
    "title": "Test",
  },
]
`;

exports[`career meta data: can restore from server 1`] = `
Object {
  "1": Object {
    "status": "Complete",
  },
}
`;

exports[`career meta data: can restore from server 2`] = `
Array [
  Object {
    "career": Object {
      "description": "Test",
      "id": 1,
      "image": "TestImage",
      "notes": Array [
        "a",
        "b",
      ],
      "title": "Test",
    },
    "saved": "Wed Dec 31 1969 19:00:00 GMT-0500 (EST)",
  },
]
`;

exports[`career meta data: can restore from server 3`] = `
Object {
  "currentRevision": 1,
  "searchString": "",
  "showImages": false,
  "showStatuses": Array [
    "Not Started",
    "In Progress",
    "Complete",
  ],
}
`;

exports[`career meta data: can restore from server 4`] = `
Array [
  Array [
    "bookmarks",
    "[{\\"career\\":{\\"title\\":\\"Test\\",\\"description\\":\\"Test\\",\\"notes\\":[\\"a\\",\\"b\\"],\\"image\\":\\"TestImage\\",\\"id\\":1},\\"saved\\":\\"Wed Dec 31 1969 19:00:00 GMT-0500 (EST)\\"}]",
  ],
  Array [
    "careersMeta",
    "{\\"1\\":{\\"status\\":\\"Complete\\"}}",
  ],
]
`;

exports[`career meta data: can save to server 1`] = `
Object {
  "currentRevision": 1,
  "searchString": "",
  "showImages": false,
  "showStatuses": Array [
    "Not Started",
    "In Progress",
    "Complete",
  ],
}
`;

exports[`career meta data: can update careerMeta state 1`] = `
Object {
  "1": Object {
    "status": "Not Started",
  },
}
`;

exports[`career meta data: can update careerMeta state 2`] = `
Array [
  Array [
    "careersMeta",
    "{\\"1\\":{\\"status\\":\\"Not Started\\"}}",
  ],
]
`;

exports[`career meta data: can update careerMeta state with null data 1`] = `
Object {
  "1": null,
}
`;

exports[`career meta data: can update single record in careerMeta state 1`] = `
Object {
  "1": Object {
    "status": "Complete",
  },
}
`;

exports[`career meta data: dirting state after updating meta data 1`] = `false`;

exports[`career meta data: dirting state after updating meta data 2`] = `true`;

exports[`control state: can update control state 1`] = `
Object {
  "currentRevision": null,
  "searchString": "",
  "showImages": false,
  "showStatuses": Array [
    "Not Started",
    "In Progress",
    "Complete",
  ],
}
`;

exports[`control state: can update control state 2`] = `
Object {
  "currentRevision": 0,
  "searchString": "test",
  "showImages": false,
  "showStatuses": Array [],
}
`;
